plex/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: plex-service
  namespace: plex
spec:
  selector:
    app: plex
  ports:
  - name: web
    port: 32400
    targetPort: 32400
  type: LoadBalancer
  loadBalancerIP: 10.0.20.3
